[gd_scene load_steps=13 format=3 uid="uid://dtkw62ud4lman"]

[ext_resource type="Texture2D" uid="uid://j8nrgymgxg1u" path="res://art/RadiantDaisySeed.png" id="1_2xfcj"]
[ext_resource type="Script" path="res://radiant_daisy.gd" id="1_c6nkn"]
[ext_resource type="FontFile" uid="uid://vgv1ku8o106o" path="res://art/Harvest Season.otf" id="1_xlxr4"]
[ext_resource type="Texture2D" uid="uid://debnf03tq831d" path="res://art/RadiantDaisySeedHover.png" id="2_hw2eq"]
[ext_resource type="Texture2D" uid="uid://fw0qo8gqnrrg" path="res://art/rain_particle.png" id="4_go6kn"]
[ext_resource type="AudioStream" uid="uid://531hhrg0vrob" path="res://art/water_plant_sound.mp3" id="5_bsyea"]
[ext_resource type="AudioStream" uid="uid://o660qafg4t38" path="res://art/spray_sound.mp3" id="6_yhyk1"]
[ext_resource type="AudioStream" uid="uid://cjyfxq273tw54" path="res://art/prune_sound.mp3" id="7_0hx8j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xkjcm"]
bg_color = Color(0.470588, 0.419608, 0.301961, 1)
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7g5h1"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 16.0
expand_margin_right = 16.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v3dw1"]
bg_color = Color(0.917647, 0.917647, 0.917647, 0.407843)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 16.0
expand_margin_right = 16.0

[sub_resource type="CanvasTexture" id="CanvasTexture_xm3xf"]
diffuse_texture = ExtResource("4_go6kn")

[node name="RadiantDaisy" type="TextureButton"]
z_index = 1
offset_left = -9.0
offset_top = -4.0
offset_right = 380.0
offset_bottom = 487.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("1_2xfcj")
texture_hover = ExtResource("2_hw2eq")
script = ExtResource("1_c6nkn")

[node name="DaisyTimer" type="Timer" parent="."]
wait_time = 60.0

[node name="DaisyPanel" type="Panel" parent="."]
visible = false
z_index = 1
custom_minimum_size = Vector2(1400, 400)
layout_mode = 0
offset_left = -470.0
offset_top = 190.0
offset_right = 930.0
offset_bottom = 590.0
theme_override_styles/panel = SubResource("StyleBoxFlat_xkjcm")

[node name="DaisyLabel" type="Label" parent="DaisyPanel"]
layout_mode = 0
offset_left = 60.0
offset_top = 29.9998
offset_right = 380.0
offset_bottom = 66.9998
scale = Vector2(4, 4)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("1_xlxr4")
theme_override_font_sizes/font_size = 25
text = "Test"
horizontal_alignment = 1

[node name="WaterButton" type="Button" parent="DaisyPanel"]
layout_mode = 0
offset_left = 95.0
offset_top = 185.0
offset_right = 400.0
offset_bottom = 333.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_fonts/font = ExtResource("1_xlxr4")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_7g5h1")
theme_override_styles/hover = SubResource("StyleBoxFlat_v3dw1")
text = "Water"

[node name="FertilizerButton" type="Button" parent="DaisyPanel"]
layout_mode = 0
offset_left = 905.0
offset_top = 185.0
offset_right = 1302.0
offset_bottom = 333.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_fonts/font = ExtResource("1_xlxr4")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_7g5h1")
theme_override_styles/hover = SubResource("StyleBoxFlat_v3dw1")
text = "Fertilize"

[node name="PruneButton" type="Button" parent="DaisyPanel"]
layout_mode = 0
offset_left = 500.0
offset_top = 185.0
offset_right = 807.0
offset_bottom = 333.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_fonts/font = ExtResource("1_xlxr4")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_7g5h1")
theme_override_styles/hover = SubResource("StyleBoxFlat_v3dw1")
text = "Prune"

[node name="CloseButton" type="Button" parent="DaisyPanel"]
layout_mode = 0
offset_left = 1280.0
offset_top = -5.0
offset_right = 1387.0
offset_bottom = 135.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_fonts/font = ExtResource("1_xlxr4")
theme_override_font_sizes/font_size = 100
text = "x"
flat = true

[node name="WaterParticles" type="CPUParticles2D" parent="."]
z_index = 2
position = Vector2(225, -295)
emitting = false
amount = 20
lifetime = 0.7
one_shot = true
texture = SubResource("CanvasTexture_xm3xf")
emission_shape = 3
emission_rect_extents = Vector2(200, 1)
scale_amount_min = 0.1
scale_amount_max = 0.15

[node name="FertilizerParticles" type="CPUParticles2D" parent="."]
z_index = 2
position = Vector2(225, -295)
emitting = false
amount = 20
lifetime = 0.7
one_shot = true
emission_shape = 3
emission_rect_extents = Vector2(200, 1)

[node name="WaterTimer" type="Timer" parent="."]
wait_time = 40.0
one_shot = true

[node name="PruneTimer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true

[node name="WaterSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_bsyea")
volume_db = 18.0

[node name="FertilizerSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_yhyk1")
volume_db = 4.0

[node name="PruneSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_0hx8j")
volume_db = 6.0

[node name="TendPlantTutorial" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = -0.079
anchor_top = 0.856
anchor_right = -0.079
anchor_bottom = 0.856
offset_left = -439.269
offset_top = -1270.3
offset_right = 504.731
offset_bottom = -858.296
scale = Vector2(1.5, 1.5)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_fonts/font = ExtResource("1_xlxr4")
theme_override_font_sizes/font_size = 75
text = "Click on the plant to 
tend to it while it grows.
In the seed stage, 
you can just click on the pot. "
horizontal_alignment = 1

[node name="TendPlantTutorial2" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = -0.079
anchor_top = 0.856
anchor_right = -0.079
anchor_bottom = 0.856
offset_left = -774.269
offset_top = -1520.3
offset_right = 581.731
offset_bottom = -799.296
scale = Vector2(1.5, 1.5)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_fonts/font = ExtResource("1_xlxr4")
theme_override_font_sizes/font_size = 75
text = "You can water a plant every 
4 in game hours (40 seconds),
and prune every 6 hours,
however you cannot prune a plant
until it reaches it's second growth stage.
You can apply fertilizer once per day.
(or night)"
horizontal_alignment = 1

[node name="TendPlantTutorial3" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = -0.079
anchor_top = 0.856
anchor_right = -0.079
anchor_bottom = 0.856
offset_left = -789.269
offset_top = -1435.3
offset_right = 566.731
offset_bottom = -1023.3
scale = Vector2(1.5, 1.5)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_fonts/font = ExtResource("1_xlxr4")
theme_override_font_sizes/font_size = 75
text = "Watering reduces the flower's remaining
grow time by 1 in game hour (10 seconds),
pruning reduces it by 2 hours, and
applying fertilizer reduces it by 3 hours."
horizontal_alignment = 1

[node name="WaitForFlowerTutorial" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = -0.079
anchor_top = 0.856
anchor_right = -0.079
anchor_bottom = 0.856
offset_left = -714.269
offset_top = -1440.3
offset_right = 641.731
offset_bottom = -925.296
scale = Vector2(1.5, 1.5)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_fonts/font = ExtResource("1_xlxr4")
theme_override_font_sizes/font_size = 75
text = "Wait for your first 
flower to finish growing,
tending to it when needed.

It should be done shortly."
horizontal_alignment = 1

[node name="SellFlowerTutorial" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = -0.079
anchor_top = 0.856
anchor_right = -0.079
anchor_bottom = 0.856
offset_left = -664.269
offset_top = -1415.3
offset_right = 691.731
offset_bottom = -1103.3
scale = Vector2(1.5, 1.5)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_fonts/font = ExtResource("1_xlxr4")
theme_override_font_sizes/font_size = 75
text = "Click on a fully grown
flower to sell it."
horizontal_alignment = 1

[connection signal="pressed" from="." to="." method="_on_radiant_daisy_pressed"]
[connection signal="timeout" from="DaisyTimer" to="." method="_on_daisy_timer_timeout"]
[connection signal="pressed" from="DaisyPanel/WaterButton" to="." method="_on_water_button_pressed"]
[connection signal="pressed" from="DaisyPanel/FertilizerButton" to="." method="_on_fertilizer_button_pressed"]
[connection signal="pressed" from="DaisyPanel/PruneButton" to="." method="_on_prune_button_pressed"]
[connection signal="pressed" from="DaisyPanel/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="timeout" from="WaterTimer" to="." method="_on_water_timer_timeout"]
[connection signal="timeout" from="PruneTimer" to="." method="_on_prune_timer_timeout"]
